[gd_scene load_steps=9 format=2]

[ext_resource path="res://games/flash_ttt/assets/players/myPlayer/flashtttmyPlayer.gd" type="Script" id=1]
[ext_resource path="res://games/flash_ttt/assets/players/myPlayer/flashtttweapons.gd" type="Script" id=2]
[ext_resource path="res://games/flash_ttt/assets/players/myPlayer/flashtttplayerUI.gd" type="Script" id=4]
[ext_resource path="res://games/flash_ttt/assets/players/myPlayer/textures/WhiteCircle.png" type="Texture" id=6]
[ext_resource path="res://games/flash_ttt/assets/players/myPlayer/textures/GoodFlashTexture.png" type="Texture" id=7]
[ext_resource path="res://games/flash_ttt/assets/UI/buyMenu/buyMenu.tscn" type="PackedScene" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

var startingFlashState = false

var flashOn = false

func flashToggle(flashState):
	flashOn = flashState
	if flashState:
		$Flashlight.show()
		get_parent().get_node(\"Sprite\").z_index = 2
	else:
		$Flashlight.hide()
		get_parent().get_node(\"Sprite\").z_index = 1
	rpc(\"remoteFlashToggle\", flashState)

remote func remoteFlashToggle(flashState):
	flashOn = not flashOn
	if flashState:
		$Flashlight.show()
	#	$Sprite.z_index = 1
	else:
		$Flashlight.hide()
		get_parent().get_node(\"Sprite\").z_index = 0

func _on_Flashlight_ready():
	pass
	#flashToggle(startingFlashState)

func _on_Last_ready():
	if get_parent().is_network_master():
		$onlyLOS.show()
		$LineOfSight.show()
		#get_parent().get_node(\"Sprite\").z_index = 2
	#flashToggle(false)
	#flashToggle(startingFlashState)
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -10000.0
margin_top = -10000.0
margin_right = -8000.0
margin_bottom = -8000.0
rect_scale = Vector2( 10, 10 )
color = Color( 0.772549, 0.596078, 0.517647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
light_mask = 2
z_index = 2
z_as_relative = false
color = Color( 0.298039, 0.298039, 0.298039, 0 )

[node name="Lighting" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="onlyLOS" type="Light2D" parent="Lighting"]
visible = false
scale = Vector2( 0.2, 0.2 )
z_as_relative = false
texture = ExtResource( 6 )
texture_scale = 50.0
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="RadiusLight" type="Light2D" parent="Lighting"]
visible = false
scale = Vector2( 0.2, 0.2 )
z_as_relative = false
texture = ExtResource( 6 )
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Flashlight" type="Light2D" parent="Lighting"]
visible = false
rotation = -1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 7 )
offset = Vector2( 0, 270 )
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="LineOfSight" type="Light2D" parent="Lighting"]
visible = false
light_mask = 2
scale = Vector2( 1000, 1000 )
z_index = 1
z_as_relative = false
texture = ExtResource( 6 )
texture_scale = 0.01
color = Color( 0.298039, 0.298039, 0.298039, 0 )
energy = 0.0
mode = 3
shadow_color = Color( 0.298039, 0.298039, 0.298039, 1 )
shadow_item_cull_mask = -2147483647
__meta__ = {
"_edit_lock_": true
}

[node name="RevealEverything" type="Light2D" parent="Lighting"]
visible = false
scale = Vector2( 10, 10 )
z_index = 1
z_as_relative = false
texture = ExtResource( 6 )
texture_scale = 50.0
energy = 0.75
mode = 3
shadow_color = Color( 1, 1, 1, 0 )
shadow_buffer_size = 8192
__meta__ = {
"_edit_lock_": true
}

[node name="Invisifier" type="Light2D" parent="Lighting"]
position = Vector2( 5000, 0 )
rotation = -1.5708
scale = Vector2( 5000, 5000 )
z_as_relative = false
texture = ExtResource( 7 )
offset = Vector2( 0, 240 )
energy = 2.0
mode = 3
range_z_min = 0
range_z_max = 0
shadow_enabled = true
shadow_buffer_size = 8192
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 5, 5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Polygon2D" parent="."]
z_index = 2
z_as_relative = false
polygon = PoolVector2Array( -30, -30, 30, -30, 30, 30, -30, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeathX" type="Polygon2D" parent="Sprite"]
visible = false
z_index = 1
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -30, -20, -10, 0, -30, 20, -30, 30, -20, 30, 0, 10, 20, 30, 30, 30, 30, 20, 10, 0, 30, -20, 30, -30, 20, -30, 0, -10, -20, -30, -30, -30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Barrel" type="Position2D" parent="Weapons"]
position = Vector2( 51, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShotCooldownTimer" type="Timer" parent="Weapons"]
wait_time = 0.1
one_shot = true

[node name="ReloadTimer" type="Timer" parent="Weapons"]
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerUI" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource( 4 )

[node name="Health" type="Label" parent="PlayerUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -60.0
margin_bottom = -50.0
text = "Health: 100"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="PlayerUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -30.0
margin_bottom = -20.0
text = "Ammo: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="PlayerUI"]
anchor_right = 1.0
anchor_bottom = 0.05
text = "Current Weapon"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Interaction" type="Label" parent="PlayerUI"]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.2
text = "Interaction"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WeaponDisplay" type="Control" parent="PlayerUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyMenu" parent="PlayerUI" instance=ExtResource( 8 )]

[node name="Last" type="Node" parent="."]
[connection signal="ready" from="Lighting/Flashlight" to="Lighting" method="_on_Flashlight_ready"]
[connection signal="timeout" from="Weapons/ShotCooldownTimer" to="Weapons" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="Weapons/ReloadTimer" to="Weapons" method="_on_ReloadTimer_timeout"]
[connection signal="ready" from="PlayerUI" to="." method="_on_PlayerUI_ready"]
[connection signal="ready" from="Last" to="." method="_on_Last_ready"]
[connection signal="ready" from="Last" to="Lighting" method="_on_Last_ready"]
